--- a/extend/extend04.html
+++ b/extend/extend04.html
@@ -55,13 +55,13 @@
 
             <div id="questions">
                 <!-- Use the paragraph element below to identify the online color converter you used to complete this assignment. Include an absolute link to your resource and include the target attribute to open the page in a new tab. -->
-                <p>Color Converter Used: </p>
+                <p>Color Converter Used: I used the explore function at <a href="https://color.adobe.com/explore" target="_blank">Adobe Color</a> to find appropriate colors and <a href="https://www.colorhexa.com/" target="_blank">Color Hexa</a> to find the RGB and HSL values.</p>
 
                 <!-- Use the paragraph element below to compare and contrast your findings regarding hexadecimal, RGB, and HSL color codes. -->
-                <p> </p>
+                <p>Hexadecimal, RGB, and HSL all contain the same information about a color. Hex uses a base-16 value, RGB shows the three values for the mixture of red, green, and blue with values between 0 and 255. HSL stands for hue, saturation, lightness. Hue is a degree on the color wheel from 0 to 360. 0 is red, 120 is green, and 240 is blue. Saturation is a percentage value. 0% means a shade of gray, and 100% is the full color. Lightness is also a percentage value. 0% is black, and 100% is white.</p>
 
                 <!-- Use the paragraph element below to identify your preferred color code format (hexadecimal, RBG, or HSL) and why. -->
-                <p>Preferred color code format: </p>
+                <p>Preferred color code format: I think hex is the best format because a # followed by six letters and numbers is the most simple to type out.</p>
 
                 <!-- Use the paragraph element to discuss HWB color. -->
                 <p>HWB summary</p>
