--- a/extend/extend04.html
+++ b/extend/extend04.html
@@ -61,13 +61,13 @@
                 <p>Hexadecimal, RGB, and HSL all contain the same information about a color. Hex uses a base-16 value, RGB shows the three values for the mixture of red, green, and blue with values between 0 and 255. HSL stands for hue, saturation, lightness. Hue is a degree on the color wheel from 0 to 360. 0 is red, 120 is green, and 240 is blue. Saturation is a percentage value. 0% means a shade of gray, and 100% is the full color. Lightness is also a percentage value. 0% is black, and 100% is white.</p>
 
                 <!-- Use the paragraph element below to identify your preferred color code format (hexadecimal, RBG, or HSL) and why. -->
-                <p>Preferred color code format: I think hex is the best format because a # followed by six letters and numbers is the most simple to type out.</p>
+                <p>Preferred color code format: I think hex is the best format because a # followed by six letters and numbers is the slightly more simple to type out.</p>
 
                 <!-- Use the paragraph element to discuss HWB color. -->
-                <p>HWB summary</p>
+                <p>HWB stands for hue, whiteness and blackness. The hue value is the same as it is in HSL. The other two values represent how much white or black is mixed into that hue, up to 100% (which would result in a totally white or totally black color). If equal amounts of white and black are mixed in, the color becomes increasingly gray. </p>
 
                 <!-- Use the paragraph element to discuss CMYK color. -->
-                <p>CMYK summary</p>
+                <p>CMYK colors are a combination of Cyan, Magenta, yellow, and black. It's a subractive color spectrum commonly used by printers. The inks mask colors on a lighter background such as white printer paper.</p>
 
             </div>
 
@@ -77,7 +77,7 @@
 
     <!-- Add a class attribute to the footer element below to set a background color of light blue. Use hexadecimal. -->
 	<footer>
-		<p>Student Name: </p>
+		<p>Student Name: Stephen Davis</p>
 		<p>Chapter 4, Extend Your Knowledge</p>
 	</footer>
 
