--- a/analyze/analyze04.html
+++ b/analyze/analyze04.html
@@ -38,14 +38,14 @@
         <div id="css2">
 
             <h2>CSS Level 2</h2>
-            <p>The CSS Level 2 recommendation was originally released by the W3C in May 1998. There have been many revisions since its original release. CSS Level 2 has had two revisions, <a href="https://www.w3.org/TR/CSS2/" target="_blank">CSS 2.1</a> and <a href="https://www.w3.org/TR/CSS22/" target="_blank">CSS 2.2</a>.</p>
+            <p>The CSS Level 2 recommendation was originally released by the W3C in May 1998. There have been many revisions since its original release. CSS Level 2 has had two revisions, <a href="https://www.w3.org/TR/CSS2/" target="_blank"><span class="link">CSS 2.1</span></a> and <a href="https://www.w3.org/TR/CSS22/" target="_blank"><span class="link">CSS 2.2</span></a>.</p>
 
         </div>
 
         <div id="css3">
 
             <h2>CSS Level 3 and Beyond</h2>
-            <p>The CSS Level 3 recommendation was released in May 2001. Since its release, there have been several changes, including the method for making changes. For the latest updates, visit the <a href="https://www.w3.org/Style/CSS/current-work" target="_blank">CSS Current Work webpage</a>.</p>
+            <p>The CSS Level 3 recommendation was released in May 2001. Since its release, there have been several changes, including the method for making changes. For the latest updates, visit the <a href="https://www.w3.org/Style/CSS/current-work" target="_blank"><span class="link">CSS Current Work webpage</span></a>.</p>
 
         </div>
 
