--- a/analyze/analyze04.html
+++ b/analyze/analyze04.html
@@ -18,12 +18,15 @@
 
     <!-- Nav -->
 	<nav>
+
 		<ul>
-            <li><a href="#">W3C</a></li>
-            <li><a href="#">W3Schools</a></li>
-            <li><a href="#">CSS Working Group</a></li>
-            <li><a href="#">CSS Current Work</a></li>
-        </ul>
+            <li><a href="https://www.w3.org/" target="_blank">W3C</a></li>
+            <li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></li>
+            <li><a href="https://www.w3.org/Style/CSS/members" target="_blank">CSS Working Group</a></li>
+            <li><a href="https://www.w3.org/Style/CSS/current-work" target="_blank">CSS Current Work</a></li>
+
+    </ul>
+
 	</nav>
 
 	<main>
@@ -55,7 +58,7 @@
 
 	<div id="footer">
 
-		<p>Student Name: </p>
+		<p>Student Name: Stephen Davis</p>
 		<p>&copy; Copyright 2021. All Rights Reserved.</p>
 
 	</div>
